actualizacion de iconos

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     </header>
 
     <section class="contenedor seccion-margin">
-      <h2>Más sobre nosotros</h2>
+      <h2 class="regular-font centrar-texto">Más sobre nosotros</h2>
 
       <div class="columnas-nosotros">
         <div class="columna">
-          <img src="img/icono1.svg" alt="" />
+          <img src="img/icono1.svg" alt="" class="columna-img"/>
           <h3>Seguridad</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus
